[gd_scene load_steps=10 format=3 uid="uid://n0sojk6eoh8q"]

[ext_resource type="Script" path="res://player.gd" id="1_n1ysu"]
[ext_resource type="AudioStream" uid="uid://dugunic8nspe5" path="res://Pistol Sound Effect.mp3" id="2_a1sps"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6pp5x"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0o2ac"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_76vft"]

[sub_resource type="GDScript" id="GDScript_xpbf4"]
script/source = "extends Camera3D

const MOUSE_SENSITIVITY = 0.01

func _input(event: InputEvent) -> void:
	if event is InputEventMouseMotion:
		rotation.x -= event.relative.y * MOUSE_SENSITIVITY
		rotation.x = clamp(rotation.x, -PI/2, PI/2)
"

[sub_resource type="BoxMesh" id="BoxMesh_42txb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wxend"]
albedo_color = Color(0.314316, 0.314316, 0.314316, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qjy27"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_n1ysu")

[node name="Area3D" type="Area3D" parent="." groups=["Player"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_6pp5x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_0o2ac")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_76vft")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.011211, 0.724772, -0.00525212)
script = SubResource("GDScript_xpbf4")

[node name="Gun" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(0.113449, 0, 0, 0, 0.105704, 0, 0, 0, 1, 0.172698, -0.247814, -0.389963)
mesh = SubResource("BoxMesh_42txb")
surface_material_override/0 = SubResource("StandardMaterial3D_wxend")

[node name="Muzzle" type="Marker3D" parent="Camera3D/Gun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.837167)

[node name="SpotLight3D" type="SpotLight3D" parent="Camera3D/Gun"]
transform = Transform3D(8.81453, 0, 0, 0, 9.46038, 0, 0, 0, 1, 0.0133774, 0.0142164, -0.520063)
light_color = Color(1, 0, 0, 1)
spot_range = 44.943
spot_attenuation = -8.44
spot_angle = 0.5

[node name="InteractionZone" type="Area3D" parent="Camera3D" groups=["InteractionZone"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.011211, -0.724772, 0.00525212)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/InteractionZone"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.5, -1)
shape = SubResource("CylinderShape3D_qjy27")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="HealthBar" type="ProgressBar" parent="HUD"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 0
anchor_right = 0.158854
anchor_bottom = 0.0416667
step = 1.0
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="InteractionLabel" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.439236
anchor_top = 0.964506
anchor_right = 0.560764
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "Press F to interact"
metadata/_edit_use_anchors_ = true

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a1sps")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_entered" from="Camera3D/InteractionZone" to="." method="_on_interaction_zone_area_entered"]
[connection signal="area_exited" from="Camera3D/InteractionZone" to="." method="_on_interaction_zone_area_exited"]
[connection signal="timeout" from="GunTimer" to="." method="_on_gun_timer_timeout"]
